# healthflow-ai

./: .gitignore  README.md  app.py  main.py  pyproject.toml
.streamlit/: config.toml
databricks/: 01_bronze_ingestion.ipynb  02_silver_transformation.ipynb  03_gold_aggregations.ipynb  04_ai_insights.ipynb
notebooks/: healthflow.ipynb
setup/: 01_adf_pipeline.py  02_databricks_setup.py  03_connect_adf_databricks.py  add_secret.py  run_all.py
